# teahouse-pos

./: .env.example  ADVANCED_FEATURES_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PROCESS_EXPLAINED.md  DEPLOY_EXISTING_VPS.md  DEPLOY_NOW.md  DIGITAL_SIGNAGE_GUIDE.md  ENV_PRODUCTION_CONFIG.md  FOOD_COURT_CARD_ANALYSIS.md  FOOD_COURT_CARD_COMPLETE.md  FOOD_COURT_CARD_IMPLEMENTATION_STATUS.md  INSTALLATION.md  INVENTORY_REPORTS_QUICKSTART.md  LAUNCH_READY.md  MULTI_PROJECT_VPS_GUIDE.md  PWA_SETUP_GUIDE.md  README.md  TAX_SERVICE_CHARGE_GUIDE.md  auto-deploy.sh  cleanup.sh  composer.json  package-lock.json  package.json  perfect-deploy.sh  quick-deploy.sh  tailwind.config.js
.github/workflows/: build-windows-desktop.yml
app/Http/: Kernel.php
app/Models/: Card.php  CardTransaction.php  Category.php  Customer.php  CustomerLoyaltyTransaction.php  Expense.php  Item.php  Order.php  OrderItem.php  Printer.php  PurchaseOrder.php  Setting.php  SignageMedia.php  SignageStats.php  StockItem.php  Supplier.php  Table.php  User.php
app/Services/: PrinterService.php
bootstrap/cache/: packages.php  services.php
config/: app.php  database.php  livewire.php
database/seeders/: CategorySeeder.php  (+8 more)
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
public/: generate-icons.html  manifest.json  offline.html  robots.txt  service-worker.js  sw.js
routes/: api.php  web.php
(+132 files in other folders)
