[package]
name = "tharcho-pos-desktop"
version = "1.0.0"
description = "Thar Cho POS Windows Desktop"
authors = ["Thar Cho Cafe"]
edition = "2021"

[lib]
name = "tharcho_pos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
